--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
 }
 
 #table div {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     border: black 1px solid;
     box-sizing: border-box;
 
